--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        const playerSelection = prompt("Select your choice")
-        const computerSelection = getComputerChoice()
-
-        playRound(playerSelection, computerSelection)
-    </script>
+    <div class="container">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+        <button id="restart">Restart</button>
+    </div>
+    <div class="result1"></div>
+    <div class="result2"></div>
 </body>
 </html>
